--- a/demo/templates/path.html
+++ b/demo/templates/path.html
@@ -1,97 +1,10 @@
-<!doctype html>
-<head>
-<title>Hardknocks Agency</title>
-<meta name="description" content="" />
-<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-
-<!-- Load main style sheets -->
-<link rel="stylesheet" href="../static/styles.css" />
-<link href="static/semantic-ui/semantic.css" rel="stylesheet">
-
-<link rel="shortcut icon" type="../static/image/x-icon" href="favicon.ico" />
-
-<!-- Default stylesheets for the slider -->
-<link rel="stylesheet" href="../static/nivo-slider/themes/default/default.css" type="text/css" media="screen" />
-
-<!-- Load Javascript and Jquery -->
-<script src="../static/js/jquery-1.7.1.min.js"></script>
-<script src="../static/js/jquery.nivo.slider.pack.js"></script>
-<script src="../static/js/jquery.prettyPhoto.js"></script>
-<script src="../static/js/jquery.validate.js"></script>
-<script type="text/javascript" src="../static/js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="../static/js/background-image.js"></script>
-
-<!-- Nivo Slider -->
-    <script type="text/javascript">
-    $(window).load(function() {
-        $('#slider').nivoSlider();
-    });
-    </script>
-
-    <script type="text/javascript">
-          jQuery(document).ready(function($) {
-            var background = new Easy_Background({
-              background_color: "none",
-              pattern: "../static/img/patterns/pattern-1.png",
-              autoplay: "true",
-              autoplayTime: 5,
-
-              images:["../static/img/fullscreen/screen2.jpg"],
-              images_sizing: "fill", // fill || adjust || stretch || repeat
-
-              animationIn: { attribute:["y", "alpha"], // x || y || alpha
-                    value:  ["1px", 0],
-                    easing: ["easeOutCubic", "swing"],
-                    time: [0.7, 1.5],
-                    delay:  0 },
-              animationOut: { attribute:[],
-                     value:   [],
-                     easing:  [],
-                     time:  [],
-                     delay: 0 }
-            });
-            $('body').click(background.next);
-          });
-        </script>
-
-
-</head>
-<body>
-	<!-- Start container -->
-<div id="container">
-	<!-- Side view contains the logo and header section -->
-	<div class="sideview">
-		<div class="logo">
-			<a href="/"><img src="../static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
-		</div><!-- end logo -->
-		<!-- Start menu -->
-		<div class="menu">
-			<ul class="nav">
-				<li><a href="/">主页<span class="desc">back to homepage</span></a></li>
-				<li class="dropdown"><a href="#">Apache配置<span class="desc">function</span></a>
-					<ul>
-						<li><a href="/func/conf">配置管理</a></li>
-						<li><a href="/func/effi">性能监控</a></li>
-						<li><a href="/func/path">日志管理</a></li>
-            <li><a href="/func/module">模块管理</a></li>
-					</ul>
-				</li>
-				<li><a href="/about">团队介绍<span class="desc">know about us</span></a></li>
-				<li class="dropdown"><a href="/introduction">应用介绍<span class="desc">introduction of our application</span></a>
-					<ul>
-						<li><a href="/introduction/usecase">用途介绍</a></li>
-						<li><a href="/introduction/function">功能介绍</a></li>
-					</ul>
-				</li>
-				<!-- <li class="dropdown"><a href="blog.html">Blog<span class="desc">Catch up on some news</span></a>
-					<ul>
-						<li><a href="single-blog.html">Single Blog Page</a></li>
-					</ul>
-				</li> -->
-				<li><a href="/contact" class="last">联系我们<span class="desc">Get in touch</span></a></li>
-			</ul>
-		</div><!-- end menu -->
-	</div><!-- end sideview -->
+{% extends 'base.html' %}
+{% block title %}
+ 日志管理
+{% endblock %}
+{% block head %}
+{% endblock %}
+{% block MainContainer %}
     <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >Website Template</a></div>
 <!-- Start Content -->
 	<div class="content cf">
@@ -138,16 +51,4 @@
 		</div><!-- end grid-1 -->
 	</div><!-- end content -->
 </div><!-- end container -->
-<!-- Start footer -->
-<div id="footer" class="clearfix cf">
-	<p>BUAASCSE 2019 &copy; 软件工程实验 <target="_blank" title="模板之家">弟归</a></p>
-	<ul class="clean">
-		<li><a href="#"><img src="../static/img/layout/rss.png" width="25" height="18" alt="Rss Feed" /></a></li>
-		<li><a href="#"><img src="../static/img/layout/twitter.png" width="25" height="18" alt="Twitter" /></a></li>
-		<li><a href="#"><img src="../static/img/layout/dribbble.png" width="25" height="18" alt="Dribbble" /></a></li>
-		<li><a href="#"><img src="../static/img/layout/facebook.png" width="8" height="18" alt="Facebook" /></a></li>
-	</ul>
-</div><!-- end footer -->
-
-</body>
-</html>
+{% endblock %}
