--- a/demo/templates/effi.html
+++ b/demo/templates/effi.html
@@ -22,30 +22,134 @@
 			<ul id="portfolio-one">
 				<li class="development design">
 				<h2>查看Apache状态</h2>
-				<div class="project-desc">
-					<strong>放置Apache状态情况</strong>
-					<p>施工中。。。</p>
+				<div class="ui segment">
+					<a class="ui basic right label">当前Apache服务器的状态为：</a>
+					<button class="positive ui button">Running</button>
 				</div>
 				</li>
 
 				<li class="development photography">
 				<h2>改变Apache状态</h2>
-
-				<div class="project-desc">
-					<strong>Apache状态改变按钮</strong>
-					<p>施工中。。。</p>
+				<div class="ui segment">
+					<button class="positive ui button">运行/停止</button>
+					<button class="positive ui button">重启</button>
 				</div>
 				</li>
 
 				<li class="photography design">
 				<h2>查看性能参数</h2>
 
-				<div class="project-desc">
-					<strong>放置Apache性能相关参数（可能是图表为主）</strong>
-					<p>施工中。。。</p>
+				<div class="ui segment">
+					<a class="ui basic right label">网络速度监控</a>
+					<div class="echarts" id="netSpeedChart">
+
+					</div>
+				</div>
+				<div class="ui divider"></div>
+				<div class="ui segment">
+					<a class="ui basic right label">CPU占用率监控</a>
+					<div class="echarts" id="CPUOccupied">
+
+					</div>
+				</div>
+				<div class="ui divider"></div>
+				<div class="ui segment">
+					<a class="ui basic right label">内存占用率监控</a>
+					<div class="echarts" id="RAMOccupied">
+
+					</div>
 				</div>
 				</li>
 			</ul>
 			</div>
 		</div><!-- end grid-1 -->
+		<script type="text/javascript">
+			$.get('data/asset/data/aqi-beijing.json', function (data) {
+	    myChart.setOption(option = {
+	        title: {
+	            text: 'Beijing AQI'
+	        },
+	        tooltip: {
+	            trigger: 'axis'
+	        },
+	        xAxis: {
+	            data: data.map(function (item) {
+	                return item[0];
+	            })
+	        },
+	        yAxis: {
+	            splitLine: {
+	                show: false
+	            }
+	        },
+	        toolbox: {
+	            left: 'center',
+	            feature: {
+	                dataZoom: {
+	                    yAxisIndex: 'none'
+	                },
+	                restore: {},
+	                saveAsImage: {}
+	            }
+	        },
+	        dataZoom: [{
+	            startValue: '2014-06-01'
+	        }, {
+	            type: 'inside'
+	        }],
+	        visualMap: {
+	            top: 10,
+	            right: 10,
+	            pieces: [{
+	                gt: 0,
+	                lte: 50,
+	                color: '#096'
+	            }, {
+	                gt: 50,
+	                lte: 100,
+	                color: '#ffde33'
+	            }, {
+	                gt: 100,
+	                lte: 150,
+	                color: '#ff9933'
+	            }, {
+	                gt: 150,
+	                lte: 200,
+	                color: '#cc0033'
+	            }, {
+	                gt: 200,
+	                lte: 300,
+	                color: '#660099'
+	            }, {
+	                gt: 300,
+	                color: '#7e0023'
+	            }],
+	            outOfRange: {
+	                color: '#999'
+	            }
+	        },
+	        series: {
+	            name: 'Beijing AQI',
+	            type: 'line',
+	            data: data.map(function (item) {
+	                return item[1];
+	            }),
+	            markLine: {
+	                silent: true,
+	                data: [{
+	                    yAxis: 50
+	                }, {
+	                    yAxis: 100
+	                }, {
+	                    yAxis: 150
+	                }, {
+	                    yAxis: 200
+	                }, {
+	                    yAxis: 300
+	                }]
+	            }
+	        }
+	    });
+	});	
+		</script>
 {% endblock %}
