--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -20,6 +20,7 @@
 <script src="../static/js/jquery.validate.js"></script>
 <script type="text/javascript" src="../static/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="../static/js/background-image.js"></script>
+<script type="text/javascript" src="../static/js/echarts-gl.js"></script>
 {% block head %}{% endblock %}
 <!-- Nivo Slider -->
     <script type="text/javascript">
